@@ -344,49 +344,6 @@ function EarthQuakeTest() -- needs to be global
 end
 
 /*---------------------------------------------------------
- Drugs
- --------------------------------------a-------------------*/
-function DrugPlayer(ply)
-	if not ValidEntity(ply) then return end
-	local RP = RecipientFilter()
-	RP:RemoveAllPlayers()
-	RP:AddPlayer(ply)
-	umsg.Start("DarkRPEffects", RP)
-		umsg.String("Drugged")
-		umsg.String("1")
-	umsg.End()
-	
-	RP:AddAllPlayers()
-	
-	ply:SetJumpPower(300)
-	GAMEMODE:SetPlayerSpeed(ply, GetConVarNumber("wspd") * 2, GetConVarNumber("rspd") * 2)
-	
-	local IDSteam = string.gsub(ply:SteamID(), ":", "")
-	if not timer.IsTimer(IDSteam.."DruggedHealth") and not timer.IsTimer(IDSteam) then
-		ply:SetHealth(ply:Health() + 100)
-		timer.Create(IDSteam.."DruggedHealth", 60/(100 + 5), 100 + 5, function() if ValidEntity(ply) then ply:SetHealth(ply:Health() - 1) end end)
-		timer.Create(IDSteam, 60, 1, UnDrugPlayer, ply)
-	end
-end
-
-function UnDrugPlayer(ply)
-	if not ValidEntity(ply) then return end
-	local RP = RecipientFilter()
-	RP:RemoveAllPlayers()
-	RP:AddPlayer(ply)
-	local IDSteam = string.gsub(ply:SteamID(), ":", "")
-	timer.Remove(IDSteam.."DruggedHealth")
-	timer.Remove(IDSteam)
-	umsg.Start("DarkRPEffects", RP)
-		umsg.String("Drugged")
-		umsg.String("0")
-	umsg.End()
-	RP:AddAllPlayers()
-	ply:SetJumpPower(190)
-	GAMEMODE:SetPlayerSpeed(ply, GetConVarNumber("wspd"), GetConVarNumber("rspd") )	
-end
-
-/*---------------------------------------------------------
  Shipments
  ---------------------------------------------------------*/
 local NoDrop = {} -- Drop blacklist
@@ -850,8 +807,7 @@ local function SetPrice(ply, args)
 
 	local a = tonumber(args)
 	if not a then return "" end
-	local b = math.Min(math.floor(a), (GetConVarNumber("pricecap") ~= 0 and GetConVarNumber("pricecap")) or 500)
-	if b < 0 then return "" end
+	local b = math.Clamp(math.floor(a), GetConVarNumber("pricemin"), (GetConVarNumber("pricecap") ~= 0 and GetConVarNumber("pricecap")) or 500)
 	local trace = {}
 
 	trace.start = ply:EyePos()
