@@ -25,6 +25,7 @@ DarkRP 2.4.1 SVN
 [ADD] MySQL support!
 [ADD] Support for 3D voice chat!
 [ADD] rp_adminvehicles and rp_adminnpc, restrict vehicles and NPC's!
+[ADD] rp_pricemin, set minimum price of entities.
 [FIX] // not working in letters
 [FIX] Disabling RP names not working clientside
 [FIX] Weapon checker resetting ammo
